# AlgoTrader-

./: .gitignore  CMakeList.txt  CMakeLists.txt  LICENSE  README.md  config.txt  requirements.txt
src/: config.cpp  config.h  main.cpp  market_data.cpp  market_data.h  order_manager.cpp  order_manager.h  portfolio.cpp  portfolio.h  risk_manager.cpp  risk_manager.h  strategy.cpp  strategy.h
tests/: test_strategy.cpp
